# aocpp

./: CMakeLists.txt  grabinputs.py  main.cpp  utils.cpp  utils.h
2015/: day1.cpp  day1.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day5.cpp  day5.h  day6.cpp  day6.h  day7.cpp  day7.h
2021/: day1.cpp  day1.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day5.cpp  day5.h  day6.cpp  day6.h  day7.cpp  day7.h  day8.cpp  day8.h  day9.cpp  day9.h
2022/: day1.cpp  day1.h
md5/: md5.cpp  md5.h
